tests/ui/macros/out-of-order-shadowing.stderr
error[E0659]: `bar` is ambiguous
  --> $DIR/out-of-order-shadowing.rs:5:1
   |
LL | bar!();
   | ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `bar` could refer to the macro defined here
  --> $DIR/out-of-order-shadowing.rs:4:1
   |
LL | define_macro!(bar);
   | ^^^^^^^^^^^^^^^^^^
note: `bar` could also refer to the macro defined here
  --> $DIR/out-of-order-shadowing.rs:3:1
   |
LL | macro_rules! bar { () => {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `define_macro` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
